css/style.css
/* Reset generale */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
/* ----------------------------------------------------------------------------- */

body {
    height: 100vh;
    background-color: gray;
}




img {

    width: 35px;
    height: 35px;
    border-radius: 50%;
}


/* ----------------------------------------------------------------------------- */
/* interfaccia completa dell'app */
.cont-generale {
    display: flex;
    flex-wrap: nowrap;

    max-width: 70%;
    margin: 50px auto;
    
    /* test */
    width: 1000px;
    height: 600px;
    border: 0.5px solid rgba(198, 198, 198, 0.681);
}
/* / interfaccia completa dell'app */
/* ----------------------------------------------------------------------------- */


/* ----------------------------------------------------------------------------- */
/* sezione sinistra (contatti) */
.sezione-contatti {

    border-right: 0.5px solid rgba(198, 198, 198, 0.681);

    display: flex;
    flex-direction: column;
    
    min-width: 35%;

    background-color: #fafafa;
}

.head{
    display: flex;
    justify-content: space-between;
    align-items: center;

    height: 8%;
    background-color: #eaeaea;
}

.contatti-sx {

    display: flex;
    align-items: center;

    padding-left: 10px;
    padding-right: 10px;
}

.contatti-dx {

    display: flex;
    gap: 12px;
    color: #b1b1b1;
    padding-right: 10px;
}

.notifiche-onOff {

    display: flex;
    align-items: center;

    height: 10%;
    background-color: #8edafc;
    padding-left: 15px;

}

.icona-notifica {

    background-color: white;
    border-radius: 50%;
    padding: 10px;
}

.fa-bell-slash {

    color: #8edafc;
}

.testo-notifica {

    display: flex;
    flex-direction: column;
    padding-left: 5px;
}

.testo-notifica-1 {
    font-size: 15px;
}

.testo-notifica-2 {
    text-decoration: underline;
    font-size: 12px;
    color: #b1b1b1;
}

.ricerca-chat {

    display: flex;


    padding: 3px;
    border-bottom: 0.5px rgba(128, 128, 128, 0.277) solid;

}

.bottone-ricerca {
    border: 0.5px rgba(128, 128, 128, 0.277) solid;

    background-color: transparent;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    width: 15%;
    padding: 4px;
}

.fa-magnifying-glass {

    font-size: 15px;
}

.input-ricerca {
    width: 85%;

    font-size: 10px;
    padding-left: 10px;
    border: 0.5px rgba(128, 128, 128, 0.277) solid;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

.interno-contatto {

    display: flex;
    flex-direction: column;
    flex-grow: 1;

    padding-left: 10px;
}

.ultimo-messaggio {
    color: #b1b1b1;
}

.interno-contatto span {

    font-size: 10px;
}

.orario {
    color: #b1b1b1;

    font-size: 10px;
    align-self:baseline;
}

.lista-contatti {
    padding-left: 0;
}

li {

    display: flex;
    justify-content: space-between;
    
    border-bottom: 0.5px rgba(128, 128, 128, 0.277) solid;

    height: 50px;
    list-style-type: none;
}

/* / sezione sinistra (contatti) */
/* ----------------------------------------------------------------------------- */



/* ----------------------------------------------------------------------------- */
/* sezione destra (chat attiva) */
.sezione-chat-attiva {

    display: flex;
    flex-direction: column;
    justify-content: space-between;

    min-width: 65%;
}

.chat-attiva { 
    overflow-y: auto;
    height: calc((100% - 8%) - 50px);
    background-image: url(../img/mine.jpg);

}

.chat-bar {

    display: flex;

    align-items: center;


    height: 50px;
    background-color: #f3eeea;
}

.bottone-emoticons {

    background-color: #f3eeea;
    border: none;
    height: 80%;
    width: 10%;
}

.bottone-microfono {

    background-color: #f3eeea;
    border: none;
    height: 80%;
    width: 10%;

}

.fa-microphone {
    color: #b1b1b1;
    font-size: 20px;
}

.input-chat {

    height: 80%;
    width: calc(100% - 60px);

    border: none;
    border-radius: 5px;

    padding-left: 10px;
}

.fa-face-smile {
    color: #b1b1b1;
    font-size: 20px;

}

.active {

    background-color: #e9ebeb;
}

.orario-messaggio {

    align-self: baseline;
    
}

.testo-messaggio {
        max-width: 88%;
        word-wrap: break-word;
}


.message {
    display: flex;
    gap: 5px;
    position: relative;
    max-width: 60%;
    word-wrap:normal;
    padding: 0.5em 0.5em;
    margin: 10px;
    border-radius: 12px;
}

.dropdown-toggle {
    position: absolute;
    top: -5px;
    right: 5px;
    background-color: transparent;
    border: none;

    display: none;
}

.message:hover .dropdown-toggle {
    display: block;
}


/* ---------------- */


/* ---------------- */
/* classi date in base se 
il messaggio è ricevuto o inviato */
.white {
    
    background-color: white;
}

.sent {
    
    display: flex;
    
    justify-content: end;
}

.received {
    
    display: flex;
    
    justify-content: flex-start;
    
}
.green {
    
    background-color: #d5f9ba;
}
/* ---------------- */

/* ---------------- */
/* / sezione destra (chat attiva) */
/* ----------------------------------------------------------------------------- */





/* ----------------------------------------------------------------------------- */


ul:hover,
i:hover,
.testo-notifica-2:hover,
img {
    cursor: pointer;
}

